Responsive css changes FIX
- Fix text area overflowing body
- Add queries
- Create wrap class

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -49,6 +49,10 @@
 
 .flex-container {
     display: flex;
+}
+
+.wrap {
+
     flex-wrap: wrap;
 }
 
